# sqlalchemy-audit-events

./: README.md  pyproject.toml  pytest.ini
src/sqlalchemy_audit_events/: __init__.py  events.py
tests/: test_events.py
